# Acidum

./: .clangd  .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md  compileShaders.sh
Acidum/: CMakeLists.txt
Acidum/include/Acidum/Core/: Application.hpp
Acidum/include/Acidum/Core/Base/: Assert.hpp  Consts.hpp  Logger.hpp  Types.hpp
Acidum/include/Acidum/Core/Platform/: GLFWContext.hpp  Input.hpp  KeyboardCode.hpp  MouseCode.hpp  PlatformUtils.hpp  SystemInfo.hpp  Window.hpp
Acidum/include/Acidum/Core/Resources/: ImageLoader.hpp  MaterialSystem.hpp  ModelLoader.hpp  ResourceManager.hpp
Acidum/include/Acidum/Graphics/: GraphicsFactory.hpp  Material.hpp
Acidum/include/Acidum/Graphics/Interfaces/: IGraphicsAPI.hpp  IMesh.hpp  ITexture2D.hpp
Acidum/include/Acidum/Graphics/Vulkan/: VulkanBuffer.hpp  VulkanDescriptorManager.hpp  VulkanGraphicsAPI.hpp  VulkanMesh.hpp  VulkanPipeline.hpp  VulkanSwapChain.hpp  VulkanSyncManager.hpp
Acidum/include/Acidum/Scene/: Camera.hpp  Entity.hpp
Acidum/src/Core/: Application.cpp  EntryPoint.cpp
Acidum/src/Core/Base/: Assert.cpp  Logger.cpp
Acidum/src/Core/Platform/: GLFWContext.cpp  Input.cpp  Window.cpp
Acidum/src/Core/Platform/Linux/: PlatformUtils.cpp
Acidum/src/Core/Platform/Windows/: PlatformUtils.cpp
Acidum/src/Core/Resources/: ImageLoader.cpp  MaterialSystem.cpp  ModelLoader.cpp  ResourceManager.cpp  STBImage.cpp  TinyObjLoader.cpp
Acidum/src/Graphics/: GraphicsFactory.cpp
Acidum/src/Graphics/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBufferManager.cpp  VulkanCommandBufferManager.hpp  VulkanConfigs.hpp  VulkanDescriptorAllocator.cpp  VulkanDescriptorAllocator.hpp  VulkanDescriptorManager.cpp  VulkanDescriptorManager.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanGraphicsAPI.cpp  VulkanGraphicsAPI.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanLogger.hpp  VulkanMesh.cpp  VulkanMesh.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanStagingManager.cpp  VulkanStagingManager.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanSyncManager.cpp  VulkanSyncManager.hpp  VulkanTexture2D.cpp  VulkanTexture2D.hpp  VulkanTypes.hpp
Acidum/src/Scene/: Camera.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/models/: Garlic.mtl
Sandbox/assets/models/ak12/: scene.gltf
Sandbox/assets/models/window/: window_alltransforms.glb
Sandbox/assets/shaders/: shader.frag  shader.vert
Sandbox/include/: SandboxApp.hpp
Sandbox/include/Sandbox/: Application.hpp
Sandbox/include/Sandbox/Core/Base/: Consts.hpp
Sandbox/include/Sandbox/Scene/Controllers/: CameraController.hpp
Sandbox/src/: Application.cpp  SandboxApp.cpp  main.cpp
Sandbox/src/Scene/Controllers/: CameraController.cpp
include/: Consts.hpp  Types.hpp
include/Core/: Application.hpp  Consts.hpp  Logger.hpp  Types.hpp  Window.hpp
include/Graphics/: GraphicsFactory.hpp
include/Graphics/Interfaces/: IGraphicsAPI.hpp  IGraphicsFactory.hpp  IMesh.hpp
include/Graphics/Vulkan/: VulkanBuffer.hpp  VulkanCommandBufferManager.hpp  VulkanDescriptorManager.hpp  VulkanDevice.hpp  VulkanGraphicsAPI.hpp  VulkanMesh.hpp  VulkanPipeline.hpp  VulkanSwapChain.hpp  VulkanSyncManager.hpp  VulkanUtils.hpp
shaders/: shader_vert.vert
src/: Window.cpp  main.cpp
src/Core/: Application.cpp  Logger.cpp  Window.cpp
src/Graphics/: GraphicsFactory.cpp
src/Graphics/Vulkan/: VulkanBuffer.cpp  VulkanCommandBufferManager.cpp  VulkanDescriptorManager.cpp  VulkanDevice.cpp  VulkanGraphicsAPI.cpp  VulkanMesh.cpp  VulkanPipeline.cpp  VulkanSwapChain.cpp  VulkanSyncManager.cpp  VulkanUtils.cpp
src/core/: Window.cpp
